# ets_pointing

./: .gitignore  CLAUDE.md  netflow_test_.ipynb  pyproject.toml  requirements.txt
PPP/: PPP_v1_t.ipynb
PPP/sample_inuse/: Oguri_2  RG  RG_  clust2  rand_  star_ishi  star_ishi_  z3qso_sdss  z4lbg_1  z4lbg_2_  z4qso  z4qso_
PPP_v2/: README.md  main_v2.ipynb
PPP_v2/input/: mock_sim.csv
PPP_v2/output/: obList.ecsv  ppcList.ecsv
onlineTool_v3/: README.md  main_v3.ipynb
onlineTool_v3/input/: S24B-QN001.csv  cluster_m.csv  cluster_t.csv  star_t.csv  z4qso_t.csv
onlineTool_v3/webApp/: PPPonline_app.ipynb  celery.sqlite  celerybeat-schedule.bak  welcome.md
online_tool/.ipynb_checkpoints/: main_v1-checkpoint.ipynb
online_tool/reference_s/: Oguri_3  RG  RG_  clust1  clust2  star_ishi_  z1qso_sdss  z3qso_sdss  z4lbg_1  z4lbg_1_  z4lbg_2  z4lbg_2_  z4qso_  z4qso_c2
online_tool/user_s/: star_ishi
online_tool_v2/: main_v2.ipynb
online_tool_v2/.ipynb_checkpoints/: main_v2-checkpoint.ipynb
online_tool_v2/output/: test1_cluster_rA_ref2  test1_cluster_rA_ref3  test1_cluster_rB_ref2  test1_cluster_rB_ref3
online_tool_v2/reference_s/1/: clust1  clust2  rand1  rand2  rand3  rand4  rand5  rand6  star_ishi  star_ishi_  z4lbg_1  z4lbg_1_  z4lbg_2
online_tool_v2/reference_s/2/: rand1  rand10  rand11  rand12  rand2  rand3  rand4  rand5  rand6  rand7  rand8  rand9  z3qso_sdss
online_tool_v2/reference_s/3/: Oguri_2  clust1  rand1  z3qso_sdss  z4lbg_1_  z4qso_c2
online_tool_v2/user_s/: test1_cluster  test2_qso
pfs_design_tool/: reconfigure_fibers.py  reconfigure_fibers_ppp.py  subaru_fiber_allocation.py  utils.py  utils_2022dec.py  utils_2022nov.py  utils_2022sep.py
pfs_design_tool/misc/: check_cobra_offsets.py
pfs_design_tool/misc/testdata/: pfsDesign-0x2a3e0e7f53f47587.fits  pfsDesign-0x51ed77b5d46117c6.fits  pfsDesign-0x7637277bb44703b8_MO.fits  pfsDesign-0x7637277bb44703b8_yabe.fits
pfs_design_tool/pointing_utils/: dbutils.py  designutils.py  nfutils.py
src/pfs_design_tool/: __init__.py  reconfigure_fibers.py  reconfigure_fibers_ppp.py  subaru_fiber_allocation.py  utils.py  utils_2022dec.py  utils_2022nov.py  utils_2022sep.py
src/pfs_design_tool/misc/: check_cobra_offsets.py  compare_designs.py  test_run_script.sh
src/pfs_design_tool/misc/testdata/: pfsDesign-0x51ed77b5d46117c6_MO.fits  pfsDesign-0x7637277bb44703b8.fits
src/pfs_design_tool/pointing_utils/: dbutils.py  designutils.py  nfutils.py
test_data/: point_test  test_full_small
ups/: ets_pointing.table
